--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,10 @@
-[GENERAL]
+[PRODUCTION]
 # User access level (public, student, faculty/staff, etc.)
 # Not used yet, but possibly in future
-access_level = public
+# access_level = public
 
 # File containing the list of domains to crawl
-domain_list_file = domains.txt
-
-# Crawling depth settings
-# Applies only to the domains listed in domain_list_file. -1 means no limit.
-inner_crawl_depth = -1
+domains_file = domains.txt
 
 # Crawl depth for links within the same domain but different subdomains
 # Example: crawling its.fsu.edu, includes links to www.fsu.edu
@@ -23,8 +19,7 @@ out_of_domain_depth = 0
 
 [TESTING]
 # Debug-specific settings, overriding [GENERAL] for development purposes
-access_level = public
-domain_list_file = domains_test.txt
-inner_crawl_depth = -1
-same_domain_subdomain_depth = 0
+# access_level = public
+domains_file = domains.txt
+sibling_or_parent_domain_depth = 0
 out_of_domain_depth = 0
